<resources>
    <string name="app_name">Enigma Machine</string>
    <string name="enigma_model">M3 1939</string>

    <string name="letter_a">A</string>
    <string name="letter_b">B</string>
    <string name="letter_c">C</string>
    <string name="letter_d">D</string>
    <string name="letter_e">E</string>
    <string name="letter_f">F</string>
    <string name="letter_g">G</string>
    <string name="letter_h">H</string>
    <string name="letter_i">I</string>
    <string name="letter_j">J</string>
    <string name="letter_k">K</string>
    <string name="letter_l">L</string>
    <string name="letter_m">M</string>
    <string name="letter_n">N</string>
    <string name="letter_o">O</string>
    <string name="letter_p">P</string>
    <string name="letter_q">Q</string>
    <string name="letter_r">R</string>
    <string name="letter_s">S</string>
    <string name="letter_t">T</string>
    <string name="letter_u">U</string>
    <string name="letter_v">V</string>
    <string name="letter_w">W</string>
    <string name="letter_x">X</string>
    <string name="letter_y">Y</string>
    <string name="letter_z">Z</string>
    <string name="delete">DEL</string>
    <string name="rotor_label_placeholder">I</string>

    <string name="settings_title">Settings</string>
    <string name="sound_option">Sounds</string>
    <string name="reflector_option">Reflector</string>
    <string name="reflector_a">UKW-A</string>
    <string name="reflector_b">UKW-B</string>
    <string name="reflector_c">UKW-C</string>
    <string name="rotor_option">Rotor</string>
    <string name="position_option">Position</string>
    <string name="ring_option">Ring</string>
    <string name="plugboard_option">Plugboard</string>
    <string name="instructions_button">Instructions</string>
    <string name="close_button">Close</string>

    <string name="resolve_paste_title">Paste Error</string>
    <string name="resolve_paste_description">The text pasted contains invalid characters. It can only contain English alphabet characters, spaces, and underscores. Please remove any other characters from the text to continue.</string>
    <string name="submit_button">Submit</string>

    <string name="settings_changed_toast_message">New settings applied</string>
    <string name="text_copied_toast_message">Copied</string>
    <string name="settings_not_changed_toast_message">Could not apply settings</string>

    <string name="menu_copy_raw_text">Copy raw text</string>
    <string name="menu_copy_encoded_text">Copy encoded text</string>
    <string name="menu_copy_enigma_settings_text">Copy enigma settings (Text)</string>
    <string name="menu_copy_enigma_settings_json">Copy enigma settings (Json)</string>
    <string name="menu_paste_raw_text">Paste raw text</string>
    <string name="menu_paste_enigma_settings">Paste enigma settings (Json)</string>


    <string name="copy_settings_text">
        Rotor options: %s, Rotor start: %s, Rings: %s, Reflector: %s, Plugboard pairs: %s
    </string>

</resources>